[build-system]
requires = ["hatchling>=1.0,<2", "hatch-vcs>=0.4,<1"]
build-backend = "hatchling.build"

[project]
name = "yanka"
dynamic = ["version"]
description = "Yet ANother Knowledge App — capture engineering decisions from conversation and retrieve them later."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lucas" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.0,<9",
    "fastembed>=0.5,<1",
    "keyring>=25.0,<26",
    "ladybug>=0.16,<1",
    "lancedb>=0.20,<1",
    "litellm>=1.0,<2",
    "numpy>=1.26,<3",
    "prompt_toolkit>=3.0,<4",
    "pyarrow>=15,<22",
    "pyyaml>=6.0,<7",
    "rich>=13.0,<14",
]

[project.scripts]
yanka = "yanka.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.8,<1",
]
embedding = [
    "fastembed>=0.5,<1",
]
vectors = [
    "lancedb>=0.20,<1",
    "numpy>=1.26,<3",
    "pyarrow>=15,<22",
]
graph = [
    "ladybug>=0.16,<1",
]
llm = [
    "litellm>=1.0,<2",
]
spike = [
    "ladybug>=0.16,<1",
    "lancedb>=0.20,<1",
    "litellm>=1.0,<2",
    "numpy>=1.26,<3",
    "pyarrow>=15,<22",
]

[tool.hatch.version]
# Version comes from the git tag (e.g. v0.3.0). CI release builds pass
# SETUPTOOLS_SCM_PRETEND_VERSION_FOR_YANKA so the tag isn't required at build time.
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/yanka/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/yanka"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["spikes"]
markers = [
    "spike: dependency spike tests (require pip install -e '.[spike]')",
    "embedding: requires pip install -e '.[embedding]' (downloads ONNX model on first run)",
    "llm_live: optional live LLM call (pip install -e '.[llm]' and provider or Ollama)",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.format]
# Cypher/SQL live in multi-line string literals; the formatter breaks readable query layout.
exclude = [
    "src/yanka/graph/**",
    "tests/test_graph*.py",
    "tests/spikes/test_spike_ladybug.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
